--- a/my portfolio/index.html
+++ b/my portfolio/index.html
@@ -1,1 +1,11 @@
-hello this is my web page
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>my name is nishal</h1>
+</body>
+</html>
